--- a/P003039.opf/meta.yml
+++ b/P003039.opf/meta.yml
@@ -10,68 +10,82 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 686
+      base_file: v001.txt
     53fb5d6241694813a47e3efa952aa4e7:
       image_group_id: I2417
       title: ''
       volume_number: 2
       total_pages: 696
+      base_file: v002.txt
     4f0d64f97860440e87acc71ea18aeb5f:
       image_group_id: I2418
       title: ''
       volume_number: 3
       total_pages: 676
+      base_file: v003.txt
     f9bc0fcf0e3d44deb6a0b24184a1d10e:
       image_group_id: I2419
       title: ''
       volume_number: 4
       total_pages: 724
+      base_file: v004.txt
     30e311bcf791492bb28eb7a1444c511b:
       image_group_id: I2420
       title: ''
       volume_number: 5
       total_pages: 742
+      base_file: v005.txt
     e19d8871796a406aa43a59016239934f:
       image_group_id: I2421
       title: ''
       volume_number: 6
       total_pages: 698
+      base_file: v006.txt
     b3920f5c9de2477982c923ee9e5dfdc8:
       image_group_id: I2422
       title: ''
       volume_number: 7
       total_pages: 772
+      base_file: v007.txt
     b2ec097fb6e04674a2a4e1ab0494892b:
       image_group_id: I2423
       title: ''
       volume_number: 8
       total_pages: 744
+      base_file: v008.txt
     3f11b81a65694becb22a58ec8ad8b54a:
       image_group_id: I2424
       title: ''
       volume_number: 9
       total_pages: 730
+      base_file: v009.txt
     dcbca06568634a999b844978e7a80ddb:
       image_group_id: I2425
       title: ''
       volume_number: 10
       total_pages: 728
+      base_file: v010.txt
     a990da436e3d40b795817bb05aa011c7:
       image_group_id: I2426
       title: ''
       volume_number: 11
       total_pages: 702
+      base_file: v011.txt
     6db6cde0ac3544c5a9f9cbf0bef8a80e:
       image_group_id: I2427
       title: ''
       volume_number: 12
       total_pages: 876
+      base_file: v012.txt
     d8f7f6529aea4ab3bb5b670e4095a6be:
       image_group_id: I2428
       title: ''
       volume_number: 13
       total_pages: 894
+      base_file: v013.txt
     4c2cd1b7c5b540f08e3177b3eb471454:
       image_group_id: I2475
       title: ''
       volume_number: 14
       total_pages: 676
+      base_file: v014.txt
