--- a/P003039.opf/layers/v001/Pagination.yml
+++ b/P003039.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: bd74bcd101784144a266604c27b894f1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d28d9124b676414ea18a025ebad55901:
