--- a/P003039.opf/layers/v002/Pagination.yml
+++ b/P003039.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: c2acd67768c741a48de02853f3618bb6
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   20160e345929400aaff7a0e9e0aaa221:
