--- a/P003039.opf/layers/v003/Pagination.yml
+++ b/P003039.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: a884ae539790470eab036b6e95076c62
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a6e18217e779437fb4385531c5767779:
