--- a/P003039.opf/layers/v004/Pagination.yml
+++ b/P003039.opf/layers/v004/Pagination.yml
@@ -1,5 +1,5 @@
 id: 9e163dd9b48d484b9c3a38d7ebb20886
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f49f9f611ac946598c5b1cc00af4551f:
