--- a/P003039.opf/layers/v005/Pagination.yml
+++ b/P003039.opf/layers/v005/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2956861d35d14439a3182dffb7627d6c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   8952a34f95034050aa4052b02f0f801f:
