--- a/P003039.opf/layers/v006/Pagination.yml
+++ b/P003039.opf/layers/v006/Pagination.yml
@@ -1,5 +1,5 @@
 id: 18792423d628480e87e012e55f89a76b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   87e13d232c9b4e5abd084a37f796329a:
