--- a/P003039.opf/layers/v007/Pagination.yml
+++ b/P003039.opf/layers/v007/Pagination.yml
@@ -1,5 +1,5 @@
 id: d0a4df8243b04b6fb49b7ff9ccae6c6f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   518d78a3fae246a8b6d8138699180580:
