--- a/P003039.opf/layers/v008/Pagination.yml
+++ b/P003039.opf/layers/v008/Pagination.yml
@@ -1,5 +1,5 @@
 id: fd3edd924f4c4373874e7e0f29201a32
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2aaf4c09c6d64ac39646994712685fe0:
