--- a/P003039.opf/layers/v009/Pagination.yml
+++ b/P003039.opf/layers/v009/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4a1ca36acdf048bbbc3b4a44e170153a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   0a88012bf5ce46f289a9334e4fafa369:
