--- a/P003039.opf/layers/v010/Pagination.yml
+++ b/P003039.opf/layers/v010/Pagination.yml
@@ -1,5 +1,5 @@
 id: 503c290e2d234f9e812e2da200cbb3f2
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   515eda0d9cea49b4a623a439a09cb3b6:
