--- a/P003039.opf/layers/v011/Pagination.yml
+++ b/P003039.opf/layers/v011/Pagination.yml
@@ -1,5 +1,5 @@
 id: ee4454e24ce8420ba3bb1e10a8bd8b69
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   451611c31b1948b4bafe4033504faab9:
