--- a/P003039.opf/layers/v012/Pagination.yml
+++ b/P003039.opf/layers/v012/Pagination.yml
@@ -1,5 +1,5 @@
 id: 03f5f48e5ae44c42afb17a5a78bdd711
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   25af64779bec439cb1db4f82bd4dcb78:
