--- a/P003039.opf/layers/v013/Pagination.yml
+++ b/P003039.opf/layers/v013/Pagination.yml
@@ -1,5 +1,5 @@
 id: a4082ac19d8a4741948b698603fdf8af
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   972d3bb9a7044d7ebe05b51068acd80b:
