--- a/P003039.opf/layers/v014/Pagination.yml
+++ b/P003039.opf/layers/v014/Pagination.yml
@@ -1,5 +1,5 @@
 id: 280f2e0fa06c4881b28edd4a38588222
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   84ef26e5c63646b7a31c9ca268e40958:
