--- a/P003039.opf/meta.yml
+++ b/P003039.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P003039
 initial_creation_type: ocr
 created_at: 24/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:36:10.865335
 source_metadata:
   id: bdr:W23681
   title: སྒྲུབ་ཐབས་ཀུན་བཏུས
@@ -91,3 +91,5 @@ source_metadata:
       volume_number: 14
       total_pages: 676
       base_file: v014.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
